feat: sonarqube corrections